Static folder added

--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -8,10 +8,9 @@
   <!-- Content section -->
   <section class="py-5">
     <div class="container">
-      <h1>{{ profile.username }}</h1>
-      <p class="lead">Character</p>
+      <h1 align="center">{{ profile.username }}</h1>
+      <p class="lead" align="center">Character</p>
     </div>
   </section>
 
-  
   
