--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -2,8 +2,8 @@
 
 {% block content %}
     <ul class="list-group">
-        {% for profile in profiles %}
-        {% include "profile.html" %}
+        {% for image in images %}
+        {% include "image.html" %}
         {% endfor %}
     </ul>       
 {% endblock %}
