--- a/website/templates/image.html
+++ b/website/templates/image.html
@@ -1,16 +1,14 @@
 <!-- Header - set the background image for the header in the line below -->
   <div class=”wrapper”>
-    {% if profile.image %}
-    <img class="img-fluid d-block mx-auto" src="{{ profile.image.url }}" alt="">
+    {% if image.image %}
+    <img class="img-fluid d-block mx-auto" src="{{ image.image.url }}" alt="">
     {% endif %}  
   </div>
 
   <!-- Content section -->
   <section class="py-5">
     <div class="container">
-      <h1 align="center">{{ profile.username }}</h1>
-      <p class="lead" align="center">Character</p>
+      <h1 align="center">{{ image.user }}</h1>
+      <p class="lead" align="center">Greetings</p>
     </div>
   </section>
-
-  
