--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Social Network</title>
+  <title>Superheros</title>
 
   <!-- Bootstrap core CSS -->
   <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -29,7 +29,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Social Network Website 2019</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Superheros Website 2019</p>
     </div>
     <!-- /.container -->
   </footer>
