--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,14 +1,14 @@
 <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Social Network</a>
+      <a class="navbar-brand" href="#">Superhero Universe</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
+      <div class="navbar-collapse collapse" id="navbar">
+        <ul class="nav navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" href="/">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
@@ -21,6 +21,27 @@
         </ul>
 
         <ul class="navbar-nav ml-auto">
+        {% if user.is_authenticated %}
+          <li class="nav-item"><a class="nav-link" href="">
+          Hi, {{ user.username }}!
+            <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
+          {% else %}
+          <li>
+            <form class="form-inline my-2 my-lg-0" method="POST" action="/login/">
+              {% csrf_token %}
+              <input class="form-control mr-sm-2" type="text" name="username" placeholder="Username">
+              <input class="form-control mr-sm-2" type="password" name="password" placeholder="Password">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+            </form>
+          </li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">Sign up</a></li>
+          {% endif %}
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+        <!-- <ul class="navbar-nav ml-auto">
         {% if not user.is_authenticated %}
           <li>
             <form class="form-inline my-2 my-lg-0" method="POST" action="/login/">
@@ -44,6 +65,6 @@
         {% endif %}
       </div>
     </div>
-  </nav>
+  </nav> -->
 
   
