Updated functional test for view Extended User model using one-to-one link in Profile

--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -8,8 +8,7 @@
       <div class="navbar-collapse collapse" id="navbar">
         <ul class="nav navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="/">Home
-              <span class="sr-only">(current)</span>
+            <a class="nav-link" href="/">Home<span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
@@ -22,8 +21,7 @@
 
         <ul class="navbar-nav ml-auto">
         {% if user.is_authenticated %}
-          <li class="nav-item"><a class="nav-link" href="">
-          Hi, {{ user.username }}!
+          <li class="nav-item"><a class="nav-link" href="" id="username">Hi, {{ user.username }}!
             <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
           {% else %}
           <li>
