Update Profile model using AbstractUser; Update templates for some features; Add url on profile for detailed information; Add form using external instal requirements; Update tests;

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -1,43 +1,46 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    {% if title %}
+      <title>Superheros - {{ title }}</title>
+    {% else %}
+      <title>Superheros</title>
+    {% endif %}
+    <!-- Bootstrap core CSS -->
+    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="{% static 'css/full-width-pics.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+  </head>
 
-<head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>Superheros</title>
-
-  <!-- Bootstrap core CSS -->
-  <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-
-  <!-- Custom styles for this template -->
-  <link href="{% static 'css/full-width-pics.css' %}" rel="stylesheet">
-
-</head>
-
-<body>
-  {% include "navbar.html" %}
-  <div class="container">
-        {% block content %}
-        {% endblock %}
-    </div>
-  
-  <!-- Footer -->
-  <footer class="py-5 bg-dark">
+  <body>
+    {% include "navbar.html" %}
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Superheros Website 2019</p>
+      {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+        {% endfor %}
+      {% endif %}
+      {% block content %}
+      {% endblock %}
     </div>
-    <!-- /.container -->
-  </footer>
+    
+    <!-- Footer -->
+    <footer class="py-5 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; Superheros Website 2019</p>
+      </div>
+      <!-- /.container -->
+    </footer>
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-</body>
-
+  </body>
 </html>
