--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -2,18 +2,18 @@
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="content-section">    
-        <form method="post" action="{% url 'register' %}">
+        <form method="post" action="{% url 'login' %}">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Join Today</legend>
+                <legend class="border-bottom mb-4">Log In</legend>
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Sign Up</button>
+                <button class="btn btn-outline-info" type="submit">Login</button>
             </div>
         </form>
         <div class="border-top pt-3">
-            <small class="text-muted">Already Have An Account?<a class="ml-2" href="{% url 'login' %}">Sign In</a></small>
+            <small class="text-muted">Need An Account?<a class="ml-2" href="{% url 'register' %}">Sign Up Now</a></small>
         </div> 
     </div>
 {% endblock content %}
