--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -12,7 +12,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="{% url 'about' %}">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
@@ -22,7 +22,9 @@
         <ul class="navbar-nav ml-auto">
         {% if user.is_authenticated %}
           <li class="nav-item"><a class="nav-link" href="" id="username">Hi, {{ user.username }}!
+            <li class="nav-item"><a class="nav-link" href="{% url 'profile' %}">Profile</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
+          </li>
           {% else %}
           <li>
             <form class="form-inline my-2 my-lg-0" method="POST" action="/login/">
@@ -38,31 +40,4 @@
       </div>
     </div>
   </nav>
-
-        <!-- <ul class="navbar-nav ml-auto">
-        {% if not user.is_authenticated %}
-          <li>
-            <form class="form-inline my-2 my-lg-0" method="POST" action="/login/">
-              {% csrf_token %}
-              <input class="form-control mr-sm-2" type="text" name="username" placeholder="Username">
-              <input class="form-control mr-sm-2" type="password" name="password" placeholder="Password">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
-            </form>
-          </li>
-        {% else %}
-
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            {{ user.username }}
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/logout/">Logout</a>
-            </div>
-          </li>
-        </ul>
-        {% endif %}
-      </div>
-    </div>
-  </nav> -->
-
   
