--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -1,27 +1,18 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-    <!-- <div class="col-md-4">
-        <div class="card">
-          <div class="image">
-                <img class="card-image-top img-fluid" src="{{ user.image.url }}" >
-            </div>
-            <div class="card-block">
-              <h4 class="card-title">{{ user.username}}</h4>
-              <p class="card-text">{{ user.alter_ego }}</p>
-              <p class="card-text">{{ user.birthday }}</p>
-              <p><a class="btn btn-secondary" href="{% url 'home' %}" role="button">Back Home »</a></p>
-            </div>
-            </div>
-        </div> -->
-
+ 
     <div class="content-section">
         <div class="media">
             <img class="card-image-top img-fluid" src="{{ user.image.url }}" alt="">
             <div class="media-body">
                 <h2 class="account-heading">{{ user.username}}</h2>
-                <p class="text-secondary">{{ user.alter_ego }}</p>
-                <p class="text-secondary">{{ user.birthday }}</p>
+                <p class="text-secondary">Alter ego: {{ user.alter_ego }}</p>
+                <p class="text-secondary">First appearance: {{ user.first_appearance }}</p>
+                <p class="text-secondary">Species: {{ user.species }}</p>
+                <p class="text-secondary">Place of origin: {{ user.place_of_origin }}</p>
+                <p class="text-secondary">Team affiliations: {{ user.team_affiliations }}</p>
+                <p class="text-secondary">Abilities: {{ user.abilities }}</p>
             </div>
         </div>
     </div>     
