Fix type in template

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -7,9 +7,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
     {% if title %}
-      <title>Superheros - {{ title }}</title>
+      <title>Superheroes - {{ title }}</title>
     {% else %}
-      <title>Superheros</title>
+      <title>Superheroes</title>
     {% endif %}
     <!-- Bootstrap core CSS -->
     <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -33,7 +33,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Superheros Website 2019</p>
+        <p class="m-0 text-center text-white">Copyright &copy; Superhero Universe Website 2019</p>
       </div>
       <!-- /.container -->
     </footer>
