--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -1,23 +1,7 @@
-/* .card {
-    margin-bottom: 10px;
+body {
+    background-color: #21262c; 
+    /* #0e0e0e; */
 }
-
-.image {
-    position: center;
-    padding-bottom: 100%;
-}
-
-.image img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-} */
-
-/* .media {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-} */
 
 img {
     border: 1px solid #ddd;
@@ -25,3 +9,18 @@ img {
     padding: 5px;
     width: 20%;
   }
+
+.list-group {
+    @include media-breakpoint-only(lg) {
+        column-count: 4;
+      }
+    @include media-breakpoint-only(xl) {
+        column-count: 5;
+      }
+}
+
+/* .card-column {
+    display: inline-block;
+    column-break-inside: avoid;
+} */
+
